--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,12 +1,12 @@
 <resources>
    <string name="___LIBRARY___SETTINGS___SECTION___"></string>
-   <string name="library_settings">Bibliotheek instellingen</string>
-   <string name="scan_device_for_new_books">Scanapparaat voor nieuwe boeken</string>
+   <string name="library_settings">Instellingen bibliotheek</string>
+   <string name="scan_device_for_new_books">Scan apparaat op nieuwe boeken</string>
    <string name="add_folder">Map toevoegen</string>
    <string name="archives">Archief</string>
-   <string name="other">Anders</string>
+   <string name="other">Overig</string>
    <string name="you_need_to_update_the_library">U moet de bibliotheek bijwerken</string>
-   <string name="in_the_author_s_name_first_the_surname">In de auteur\'s naam, eerst de achternaam</string>
+   <string name="in_the_author_s_name_first_the_surname">Auteursnaam: eerst achternaam</string>
    <string name="orientation">Oriëntering</string>
    <string name="automatic">Automatisch</string>
    <string name="landscape">Landschap</string>
@@ -21,34 +21,34 @@
    <string name="theme">Thema</string>
    <string name="light">Licht</string>
    <string name="black">Zwart</string>
-   <string name="theme_color">Thema kleur</string>
+   <string name="theme_color">Kleur thema</string>
    <string name="widget">Widget</string>
    <string name="show">Tonen</string>
    <string name="layout">Lay-out</string>
    <string name="number_of_books">Aantal boeken</string>
-   <string name="remember_reading_mode">Denk aan de leesmodus</string>
-   <string name="opening_the_last_book_when_the_application_starts">Het laatste boek openen wanneer de applicatie start</string>
-   <string name="show_application_close_dialog_every_time">Toon applicatie sluiten dialoog elke keer</string>
+   <string name="remember_reading_mode">Onthoud leesmodus</string>
+   <string name="opening_the_last_book_when_the_application_starts">Open laatste boek bij starten app</string>
+   <string name="show_application_close_dialog_every_time">Bevestiging vragen bij afsluiten</string>
    <string name="display_all_file_types_in_folders">Toon alle bestandstypes in mappen</string>
-   <string name="show_the_dialog_what_is_new_for_updates">Laat het dialoogvenster Wat is nieuw voor updates</string>
+   <string name="show_the_dialog_what_is_new_for_updates">Laat dialoogvenster "Wat is nieuw" zien na updates</string>
    <string name="what_is_new_in">Wat is nieuw in</string>
-   <string name="full_list_of_changes_with_images_web_pdf_">Volledige lijst met wijzigingen met afbeeldingen (web, PDF)</string>
+   <string name="full_list_of_changes_with_images_web_pdf_">Volledige lijst met wijzigingen, met afbeeldingen (web, PDF)</string>
    <string name="search_for_text_in_documents">Multi document zoeken</string>
-   <string name="search_in_the_subfolders">Zoek in de submappen</string>
-   <string name="stop">Hou op</string>
-   <string name="document_converter_online_">Document converter (online)</string>
+   <string name="search_in_the_subfolders">Zoek in submappen</string>
+   <string name="stop">Stop</string>
+   <string name="document_converter_online_">Document converteren (online)</string>
    <string name="book_covers">Boekomslagen</string>
-   <string name="cover_image_size">Cover image size</string>
-   <string name="column_count">Column count</string>
+   <string name="cover_image_size">Grootte omslagafbeelding</string>
+   <string name="column_count">Aantal kolommen</string>
    <string name="show_book_covers">Toon boekomslag</string>
-   <string name="enable_effect_of_the_book_cover">Inschakelen effect van de cover van het boek</string>
-   <string name="crop_images_in_the_book_cover">Crop beelden in de cover van het boek</string>
-   <string name="borders_and_shadow_around_the_book_cover">Borders en schaduw rond de boekomslag</string>
-   <string name="tabs_position">Tabs positie</string>
-   <string name="show_preferences_tab_in_the_left_menu">Toon het tabblad voorkeuren in het linker menu</string>
+   <string name="enable_effect_of_the_book_cover">Boekomslag-effect inschakelen</string>
+   <string name="crop_images_in_the_book_cover">Snij omslagafbeelding bij</string>
+   <string name="borders_and_shadow_around_the_book_cover">Randen en schaduw rond de boekomslag</string>
+   <string name="tabs_position">Positie tabs</string>
+   <string name="show_preferences_tab_in_the_left_menu">Toon het tabblad Voorkeuren in het linker menu</string>
    <string name="visible">Zichtbaar</string>
    <string name="application_user_guide_">Gebruikershandleiding</string>
-   <string name="import_or_export_application_settings_to_json_file">Importeren of exporteren alle programma-instellingen</string>
+   <string name="import_or_export_application_settings_to_json_file">Importeren of exporteren van programma-instellingen</string>
    <string name="import_">Importeren ...</string>
    <string name="export_">Export ...</string>
    <string name="automatic_export_backup">Automatische export (back-up) van applicatie-instellingen, voortgang van het lezen van boeken en bladwijzers.</string>
@@ -59,20 +59,20 @@
    <string name="autor_ivan_ivanenko">Auteur: Ivan Ivanenko</string>
    <string name="support">Ondersteuning</string>
    <string name="web">Web</string>
-   <string name="beta_version">Beta versie</string>
+   <string name="beta_version">Betaversie</string>
    <string name="archive">Archief</string>
-   <string name="rate_pdf_reader1">Schrijf uw feedback en waardeert ons op Google Play is het zeer belangrijk voor ons</string>
+   <string name="rate_pdf_reader1">Schrijf feedback en waardeer ons op Google Play, dit is zeer belangrijk voor ons</string>
    <string name="___PREFERENCES___SECTION___"></string>
    <string name="formatted_text">Opgemaakte tekst (pseudo-afbeeldingen)</string>
    <string name="continuous_text">Doorlopende tekst (geen regelafbreking)</string>
-   <string name="customize_fonts">Pas fonts</string>
-   <string name="regular_font">Normaal lettertype</string>
-   <string name="bold_font">Dikgedrukt lettertype</string>
+   <string name="customize_fonts">Pas lettertype aan</string>
+   <string name="regular_font">Normaal</string>
+   <string name="bold_font">Vetgedrukt</string>
    <string name="italic_font">Cursief</string>
-   <string name="bold_italic_font">Vet Cursief lettertype</string>
+   <string name="bold_italic_font">Vet Cursief</string>
    <string name="font_for_headers">Lettertype voor headers</string>
    <string name="enable_volume_keys">Inschakelen volumetoetsen</string>
-   <string name="reverse_keys">Reverse toetsen</string>
+   <string name="reverse_keys">Toetsen omkeren</string>
    <string name="screen_orientation">Oriëntatie van het scherm</string>
    <string name="open_in_the_dictionary">Open in het woordenboek</string>
    <string name="remember_dictionary">Onthoud Woordenboek</string>
@@ -80,20 +80,20 @@
    <string name="day">Dag</string>
    <string name="nigth">Nacht</string>
    <string name="___READING___SETTINGS___SECTION___"></string>
-   <string name="reading_settings">Reading Instellingen</string>
-   <string name="folder_with_fonts">Omslag met lettertypen</string>
+   <string name="reading_settings">Leesinstellingen</string>
+   <string name="folder_with_fonts">Map met lettertypen</string>
    <string name="text_align">Tekst uitlijnen</string>
    <string name="width">Breedte</string>
    <string name="left">Linkerkant</string>
-   <string name="right">Rechter zijde</string>
+   <string name="right">Rechterkant</string>
    <string name="center">Centrum</string>
    <string name="custom_css">Aangepaste CSS</string>
    <string name="styles">Stijlen</string>
-   <string name="document_styles">Document stijlen</string>
-   <string name="user_styles">Gebruiker stijlen</string>
+   <string name="document_styles">Documentstijlen</string>
+   <string name="user_styles">Gebruikersstijlen</string>
    <string name="automatic_hyphenation">Automatische woordafbreking</string>
-   <string name="empty_line">Lege Line</string>
-   <string name="margin_width">Margebreedte</string>
+   <string name="empty_line">Lege regel</string>
+   <string name="margin_width">Marge</string>
    <string name="top">Bovenkant</string>
    <string name="bottom">Onderkant</string>
    <string name="links_color_day">Links kleur (dag)</string>
@@ -135,10 +135,10 @@
    <string name="pages_in_memory">Pagina\'s in het geheugen</string>
    <string name="screen_turn_off_after_inactivity_minutes_">Scherm niet uitgeschakeld nadat inactiviteit (minuten)</string>
    <string name="___STATUS___BAR___SETTINGS___SECTION___"></string>
-   <string name="status_bar">Status balk</string>
+   <string name="status_bar">Statusbalk</string>
    <string name="show_status_bar">Toon statusbalk</string>
-   <string name="show_progress_of_reading">Toon vooruitgang met lezen</string>
-   <string name="enable_rewind_of_pages_using_the_read_progress_line">Activeer terugspoelen van pagina\'s met behulp van de leesprogressie</string>
+   <string name="show_progress_of_reading">Toon leesvoortgang</string>
+   <string name="enable_rewind_of_pages_using_the_read_progress_line">Activeer terugspoelen van pagina\'s met behulp van de leesvoortgang</string>
    <string name="text_size">Lettergrootte</string>
    <string name="line_height">Lijnhoogte</string>
    <string name="text_color_day">Tekst kleur (dag)</string>
@@ -148,7 +148,7 @@
    <string name="language">Taal</string>
    <string name="font_size">Lettertypegrootte</string>
    <string name="brightness">Helderheid</string>
-   <string name="bluelight_filter">BlueLight-filter</string>
+   <string name="bluelight_filter">Blauw licht-filter</string>
    <string name="password">Wachtwoord</string>
    <string name="restore_defaults_short">Standaard herstellen</string>
    <string name="customize">Aanpassen</string>
@@ -180,7 +180,7 @@
    <string name="restore_default_keys">Restore Default Keys</string>
    <string name="next_keys">Volgende toetsen:</string>
    <string name="prev_keys">Vorige toetsen:</string>
-   <string name="starred">Starred</string>
+   <string name="starred">Favorieten</string>
    <string name="bookmarks">Bladwijzers</string>
    <string name="back">Terug</string>
    <string name="import_bookmarks">Bladwijzers importeren</string>
@@ -216,9 +216,9 @@
    <string name="ok">OK</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
-   <string name="apply">Van toepassing zijn</string>
+   <string name="apply">Toepassen</string>
    <string name="cancel">Annuleer</string>
-   <string name="close">Dichtbij</string>
+   <string name="close">Sluiten</string>
    <string name="restore_defaults_full">Wilt u de standaardwaarden herstellen?</string>
    <string name="send_file_to">Stuur bestand naar</string>
    <string name="apply_a_new_screen_orientation_">Breng een nieuwe oriëntatie van het scherm?</string>
@@ -250,13 +250,13 @@
    <string name="save">Save</string>
    <string name="remember_choice">Onthoud de keuze</string>
    <string name="edit">Bewerk</string>
-   <string name="make_text_reflow">Tekst mode (tekst plaatsen)</string>
+   <string name="make_text_reflow">Tekstmodus</string>
    <string name="open_with">Openen met</string>
    <string name="send_file">Verstuur bestand</string>
    <string name="delete">Verwijder</string>
    <string name="remove_from_library">Verwijder uit de bibliotheek</string>
    <string name="send_snapshot_of_the_page">Stuur momentopname van de pagina</string>
-   <string name="file_info">Bestand Informatie</string>
+   <string name="file_info">Bestandsinformatie</string>
    <string name="archive_files">Archiefbestanden</string>
    <string name="open_file">Open bestand</string>
    <string name="read_a_book">Lees een boek</string>
@@ -289,8 +289,8 @@
    <string name="msg_no_text_found">Tekst niet gevonden</string>
    <string name="annotations_draw">Annotaties en draw</string>
    <string name="go_to_page_dialog">Ga naar pagina</string>
-   <string name="bookmark_with_text">Bookmark met tekst</string>
-   <string name="fast_bookmark">Fast bookmark</string>
+   <string name="bookmark_with_text">Bladwijzer met tekst</string>
+   <string name="fast_bookmark">Snelle bladwijzer</string>
    <string name="content_of_book">Inhoud van boek</string>
    <string name="heading_and_subheadings">Koppen en subkoppen</string>
    <string name="headings_only">Alleen rubrieken</string>
@@ -324,7 +324,7 @@
    <string name="underline_of_text">Onderstrepen</string>
    <string name="strikethrough_of_text">Doorhalen</string>
    <string name="text">Tekst</string>
-   <string name="bookmark_on_page_">Bookmark op pagina</string>
+   <string name="bookmark_on_page_">Bladwijzer op pagina</string>
    <string name="share">Delen</string>
    <string name="copy">Kopiëren</string>
    <string name="search_in_google">Zoeken in Google</string>
@@ -366,14 +366,14 @@
    <string name="search_not_supported_formats">Zoek niet ondersteunde formaten</string>
    <string name="add_bookmark">Voeg bladwijzer toe</string>
    <string name="performance_settings">Prestatie-instellingen</string>
-   <string name="size_of_allocated_memory">Grootte van de toegewezen geheugen</string>
+   <string name="size_of_allocated_memory">Grootte van het toegewezen geheugen</string>
    <string name="display_settings">Beeldscherminstellingen</string>
    <string name="image_format">Beeldformaat</string>
-   <string name="enable_vibration_for_some_actions">Inschakelen trillingen voor sommige acties</string>
+   <string name="enable_vibration_for_some_actions">Trillen inschakelen voor sommige acties</string>
    <string name="image">Beeld</string>
    <string name="transparency">Transparantie</string>
    <string name="write_feedback">Schrijf feedback</string>
-   <string name="clear_all_marked">Allemaal duidelijk gemarkeerd</string>
+   <string name="clear_all_marked">Wis alle markeringen</string>
    <string name="application_cannot_open_the_book">De toepassing kan het boek niet openen</string>
    <string name="musician">Musicus</string>
    <string name="banner_slogan_LIRBI_READER">Betrouwbare en professionele programma voor het lezen van alle boeken</string>
@@ -419,8 +419,8 @@
    <string name="title">Titel</string>
    <string name="subject">Onderwerpen</string>
    <string name="keywords">Trefwoorden</string>
-   <string name="number">Aantal</string>
-   <string name="percent">Procent</string>
+   <string name="number">Paginanummer</string>
+   <string name="percent">Percentage</string>
    <string name="awards">Awards</string>
    <string name="close_book_and_application">Boek en toepassing sluiten</string>
    <string name="percent_and_number">Percentage en nummer</string>
@@ -471,7 +471,7 @@
    <string name="logout">Uitloggen</string>
    <string name="cloud_not_connected">Cloud niet verbonden</string>
    <string name="cloud_sync_folder">Cloud sync-map</string>
-   <string name="clouds">Wolken</string>
+   <string name="clouds">Online opslag</string>
    <string name="librera_cloud">Librera cloud</string>
    <string name="hide_search_bar">Zoekbalk verbergen</string>
    <string name="show_search_bar">Toon zoekbalk</string>
@@ -489,14 +489,13 @@
    <string name="show_the_capital_letter">Toon de hoofdletter</string>
    <string name="size">Grootte</string>
    <string name="quick_bookmark_by_the_headset">Snelle bladwijzer door de headset</string>
-   <string name="slider_scale">Schuifschaal</string>
-   <string name="chapter_format">Hoofdstuk formaat</string>
+   <string name="slider_scale">Weergave voortgang</string>
+   <string name="chapter_format">Formaat hoofdstuk</string>
    <string name="play_a_music_file">Speel een muziekbestand</string>
    <string name="rate_us">Beoordeel ons</string>
    <string name="reset">Reset</string>
    <string name="status_bar_location">Statusbalklocatie</string>
    <string name="add_to_bookmark">Voeg toe aan bladwijzers</string>
-   <string name="fast_reading">Snel lezen (RSVP)</string>
    <string name="minimum_line_length">Minimale lijnlengte (CPL)</string>
    <string name="ask_rate_us1">Als u van deze app houdt, kunt u ons beoordelen en beoordelen op Google Play. Dank je!</string>
    <string name="message">Bericht</string>
@@ -533,7 +532,7 @@
    <string name="tag_manager">Tag manager</string>
    <string name="the_file_already_exists_">Het bestand bestaat al</string>
    <string name="please_wait_books_are_being_processed_">Een ogenblik geduld, boeken worden verwerkt</string>
-   <string name="system_brightness">Systeem helderheid</string>
+   <string name="system_brightness">Systeemhelderheid</string>
    <string name="opening_books_in_the_specified_mode">Openen van boeken in de opgegeven modus</string>
    <string name="dark_oled">Donkere oled</string>
    <string name="profile">Profiel</string>
